WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
215866
Buttons with aria-haspopup attribute are not exposed to accessibility clients as form controls.
https://bugs.webkit.org/show_bug.cgi?id=215866
Summary
Buttons with aria-haspopup attribute are not exposed to accessibility clients...
Andres Gonzalez
Reported
2020-08-26 13:53:09 PDT
Buttons with aria-haspopup attribute are not exposed to accessibility clients as form controls.
Attachments
Patch
(9.93 KB, patch)
2020-08-26 14:13 PDT
,
Andres Gonzalez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Andres Gonzalez
Comment 1
2020-08-26 14:13:40 PDT
Created
attachment 407338
[details]
Patch
Andres Gonzalez
Comment 2
2020-08-26 14:16:40 PDT
<
rdar://problem/62898124
>
EWS
Comment 3
2020-08-26 17:08:27 PDT
Committed
r266207
: <
https://trac.webkit.org/changeset/266207
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 407338
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug