Buttons with aria-haspopup attribute are not exposed to accessibility clients as form controls. https://bugs.webkit.org/show_bug.cgi?id=215866

Reviewed by Chris Fleizach.

Source/WebCore:

Test: accessibility/mac/search-predicate-element-count.html.

Buttons with aria-haspopup were not included in the search results for
client queries for form controls. Added buttons with aria-haspopup which
have role PopUpButton, to the list of roles returned as form controls.

* accessibility/AccessibilityObject.cpp:
(WebCore::AccessibilityObject::isARIAInput): Re-wrote using a switch statement for clarity and maintainability.
(WebCore::AccessibilityObject::isARIAControl): Ditto.
* accessibility/AccessibilityObject.h:

Source/WebKit:

* WebProcess/WebPage/ios/WebPageIOS.mm:
(WebKit::WebPage::handleSyntheticClick): isARIAControl false implies
isARIAInput false, thus removed the || isARIAInput call.

LayoutTests:

Expanded this test to include the case of buttons with aria-haspopup and
several other elements with ARIA roles that need to be retrieved when
clients search for input fields or form controls.

* accessibility/mac/search-predicate-element-count-expected.txt:
* accessibility/mac/search-predicate-element-count.html:


Canonical link: https://commits.webkit.org/228662@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@266207 268f45cc-cd09-0410-ab3c-d52691b4dbfc